frontend/templates/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend 
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image:  bamfihub/baggregator:ag2
        imagePullPolicy: Always
        name: frontend
        ports:
        - name: frontend
          containerPort: 8080
      imagePullSecrets:
      - name: secret
