frontend/templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend
  labels:
    name: frontend
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: frontend
    weight: 100
  wildcardPolicy: None
